--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
         {#
         <script src="{{ asset("sklad-express/js/app.js") }}"></script>
         #}
-        <script src="{{ asset("sklad-express/js/custom.js") }}"?ver={{ date().timestamp }}></script>
+        <script src="{{ asset("sklad-express/js/custom.js") }}?ver={{ date().timestamp }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
