--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -217,7 +217,7 @@
                                 {% for item in payment %}
                                     <tr class="text-center">
                                     <tr class="text-center">
-                                        <td>{{ item.liqpayOrderId }}</td>
+                                        <td>{{ item.number }}</td>
                                         <td>{{ "Card"|trans }}</td>
                                         <td>{{ item.sum }}</td>
                                         <td>{{ item.status | trans }}</td>
