--- a/templates/authorize_dot_net/popupOuter.html.twig
+++ b/templates/authorize_dot_net/popupOuter.html.twig
@@ -103,7 +103,54 @@
     #iframeAuthorizeNet{
         width: 840px !important;
     }
+
+    .popup-wrap.open{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.36);
+        top: 0;
+        left: 0;
+        z-index: 100;
+    }
+
+    .popup-wrap.open .popup-succ {
+        position: fixed;
+        width: 350px;
+        height: 200px;
+        background: white;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4px;
+    }
+    .popup-wrap a{
+        display: none;
+    }
+    .popup-wrap.open .popup-succ a{
+        display: block;
+        position: absolute;
+        top: -41px;
+        right: -34px;
+        font-size: 20px;
+        color: black;
+        border-radius: 50%;
+        background: white;
+        padding: 4px 13px;
+    }
+    
 </style>
+
+
+<div class="popup-wrap">
+    <div class="popup-succ ">
+        <a href="#">X</a>
+        <h2 id="formAdnPayNowTitle" style="display: block !important"></h2>
+    </div>
+</div>
 
 <form method="post" action="https://accept.authorize.net/payment/payment" id="formAuthorizeNetPopup"
       name="formAuthorizeNetPopup" target="iframeAuthorizeNet" style="display:none;">
@@ -176,7 +223,6 @@
             switch (params["action"]) {
                 case "successfulSave":
                     AuthorizeNetPopup.closePopup();
-                    $('#payment_form_auth + div').html('');
                     $('.popup-wrap h2').text('{{ 'Successful payment' | trans }}');
                     $('.popup-wrap').toggleClass('open');
                     setTimeout(function () {
@@ -190,7 +236,6 @@
                     var response = params["response"];
                     // document.getElementById("token").value = response;
                     AuthorizeNetPopup.closePopup();
-                    $('#payment_form_auth + div').html('');
                     $('.popup-wrap h2').text('{{ 'Successful payment' | trans }}');
                     $('.popup-wrap').toggleClass('open');
                     setTimeout(function () {
