--- a/templates/authorize_dot_net/popupOuter.html.twig
+++ b/templates/authorize_dot_net/popupOuter.html.twig
@@ -148,7 +148,7 @@
 <div class="popup-wrap">
     <div class="popup-succ ">
         <a href="#">X</a>
-        <h2 id="formAdnPayNowTitle" style="display: block !important"></h2>
+        <h2 id="formAdnPayNowTitle" style="color: green; display: block !important"></h2>
     </div>
 </div>
 
