--- a/templates/authorize_dot_net/popupOuter.html.twig
+++ b/templates/authorize_dot_net/popupOuter.html.twig
@@ -272,11 +272,11 @@ function setTryPaid() {
         type: 'POST',
         data: datastr,
         success: function(mess) {
-            console.log('success_'+local);
+
             console.log(mess);
         },
         error:function(mess) {
-            console.log('error_'+local);
+            console.log(mess);
         }
     })
 }
