--- a/templates/track/index.html.twig
+++ b/templates/track/index.html.twig
@@ -12,12 +12,12 @@
                     </div>
                     <div class="col-md-4">
                         {% if trNumtousa is not empty %}
-                         <div class="track-font">  {{ "Track your package1"| trans }} {{ companyToUSA }}: <a href="{{ urltousa }}">{{ trNumtousa  }}</a></div>
+                         <div class="track-font">  {{ "Track your package1"| trans }} {{ companyToUSA }}: <a href="{{ urltousa }}"  target="_blank">{{ trNumtousa  }}</a></div>
                         {% endif %}
 
                         {% if express == 0 and  urlinusa is not empty %}
 
-                            <div class="track-font">{{ "Track your package2"| trans }} {{ companyInUSA }}: <a href="{{ urlinusa }}">{{ trNuminusa  }}</a></div>
+                            <div class="track-font">{{ "Track your package2"| trans }} {{ companyInUSA }}: <a href="{{ urlinusa }}"  target="_blank">{{ trNuminusa  }}</a></div>
                         {% endif %}
                     </div>
                 </div>
