--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,22 @@
     </head>
     <body>
         <div class="wrapper">
+
+            <div style="display: none;">
+                <svg>
+                    <symbol id="ls-help-s" viewBox="0 0 24 24">
+                        <defs>
+                            <circle id="a-ffff" cx="12" cy="12" r="8"></circle>
+                        </defs>
+                        <g fill="none" fill-rule="evenodd">
+                            <use fill="#FFF" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#a-ffff"></use>
+                            <circle cx="12" cy="12" r="7.5" stroke="#EEE"></circle>
+                            <path fill="#00A5FF" d="M11.462 13.632v-.361c0-.313.067-.585.2-.816.134-.231.378-.477.733-.737.342-.244.567-.443.676-.596a.863.863 0 0 0 .164-.513.555.555 0 0 0-.235-.483c-.156-.11-.374-.166-.654-.166-.488 0-1.045.16-1.67.478l-.532-1.069a4.652 4.652 0 0 1 2.31-.61c.67 0 1.203.16 1.599.483.395.322.593.752.593 1.29 0 .357-.081.667-.244.927-.163.26-.472.553-.928.879-.312.231-.51.407-.593.527a.819.819 0 0 0-.125.474v.293h-1.294zm-.156 1.67c0-.274.073-.48.22-.62.146-.14.36-.21.64-.21.27 0 .479.071.627.215.148.143.222.348.222.615 0 .257-.075.46-.224.608-.15.148-.359.222-.625.222-.274 0-.485-.073-.635-.217-.15-.145-.225-.35-.225-.613z"></path>
+                        </g>
+                    </symbol>
+                </svg>
+            </div>
+
             {% block body %}{% endblock %}
         </div>
         {% block modal %}{% endblock %}
