--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -7,7 +7,9 @@
 
 {% block title %}{{title|trans }}{% endblock %}
 
+
 {% block content %}
+
         <div class="col-12 col-xl-12">
             <div class="card card-default">
                 <div class="card-header">
@@ -25,9 +27,11 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                        {{ form_label(form.orderType,"OrderType"|trans, {
+
+                                        {{ form_label(form.orderType,"OrderType"|trans , {
                                             "label_attr": {"class": "text-muted"}
                                         }) }}
+
                                         {{ form_widget(form.orderType) }}
 
 
@@ -40,9 +44,15 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    {{ form_label(form.trackingNumber,"trackingNumber"|trans, {
+
+                                    {{ form_label(form.trackingNumber,"trackingNumber"|trans , {
                                         "label_attr": {"class": "text-muted"}
                                     }) }}
+{#
+                                    <label class="text-muted required" for="order_form_orderType">
+                                        <span>{{ "trackingNumber"|trans }}</span>{{ formhelpsservice.getTextByCode('trackingNumber') | raw }}
+                                    </label>
+                                    #}
                                     <div class="input-group with-focus ">
                                         {% if form.trackingNumber.vars.errors|length %}
                                             {{ form_widget(form.trackingNumber, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
@@ -306,6 +316,9 @@
      </div>
      <div class="preloaderR"  ><img  src="{{ asset("img/ring.svg") }}"></div>
  {% endblock %}
+
+
+
  {% block javascripts %}
      <script src="{{ asset("sklad-express/js/jquery.collection.js") }}"></script>
 <script>
