--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -38,6 +38,9 @@
                                 {% else %}
                                     Somebody
                                 {% endif %}
+                                {% if user.isVip %}
+                                <div class="float-right badge badge-success">VIP</div>
+                                {% endif %}
                             </div>
 {#                            <div class="col-md-12">#}
 {#                                {{"Cabinet"|trans }} : {{ user.id }}#}
