--- a/public/sklad-express/css/custom.css
+++ b/public/sklad-express/css/custom.css
@@ -324,11 +324,11 @@
     position: absolute;
     text-align: left;
     top: 100%;
-    transform: translateX(-50%);
+    transform: translateX(-15px);
     transition: all .2s ease;
     visibility: hidden;
     width: 300px;
-    z-index: 101
+    z-index: 101;
 }
 
 @media screen and (max-width: 767px) {
@@ -337,18 +337,7 @@
     }
 }
 
-@media screen and (max-width: 599px) {
-    .b-tooltip__body {
-        -ms-transform: translateX(0);
-        -webkit-transform: translateX(0);
-        left: 0 !important;
-        margin-top: 0;
-        position: fixed;
-        top: -5px !important;
-        transform: translateX(0);
-        width: 100vw
-    }
-}
+
 
 .b-tooltip__body:before {
     -ms-transform: translateX(-50%);
@@ -600,8 +589,10 @@
     }
 }
 
-.b-module-info__help-s{
+.b-module-info__help-s {
     width: 24px;
+    display: inline-block;
+    top: -2px;
 }
 
 .b-module-info__help-s .svg-icon {
@@ -609,5 +600,22 @@
     cursor: pointer;
     height: 24px;
     width: 24px;
+}
+
+.userNameBlock{
+    flex-direction: column;
+    display: flex;
+    text-align: center;
+    max-width: 120px;
+}
+
+.userVip{
+    display: block;
+    font-size: 14px;
+    padding: 2px 6px;
+    background-color: #7266ba;
+    margin: auto;
+    letter-spacing: 0.5px;
+
 }
 
