--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -32,14 +32,14 @@
                     </div>
                     <div class="col-8">
                         <div class="row justify-content-center  align-items-center"  style="height: 100%;">
-                            <div class="col-md-12">
+                            <div class="col-md-12 userNameBlock">
                                 {% if user.firstName %}
                                     &nbsp;&nbsp;{{ user.firstName }}
                                 {% else %}
                                     Somebody
                                 {% endif %}
                                 {% if user.isVip %}
-                                <div class="float-right badge badge-success">VIP</div>
+                                <div class="float-right badge badge-success userVip">VIP</div>
                                 {% endif %}
                             </div>
 {#                            <div class="col-md-12">#}
