--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -235,7 +235,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <input type="checkbox" id="coupon_checkgox"  > {{ "Add Coupon"|trans }}</input>
+                                <input type="checkbox" id="coupon_checkgox"  > {{ "Add Coupon"|trans }} {{ formhelpsservice.getTextByCode('coupon_checkgox') | raw }}</input>
                             </div>
                         </div>
                     </div>
